--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass": "^0.5.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.8"
+    "browser-sync": "^2.18.8",
+    "pump": "^2.0.0"
   },
   "author": "",
   "license": "ISC"
