--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
     "gulp-uglify": "^2.1.0",
-    "sass": "^0.5.0"
+    "sass": "^0.5.0",
+    "uglify-es": "^3.2.2"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
